# math-expressions

./: .babelrc  .git-blame-ignore-revs  .gitignore  .travis.yml  Cargo.toml  Gruntfile.js  LICENSE.md  Makefile  README.md  REMAINING_TYPING_ISSUES.md  TODO.md  bower.json  build.sh  dump.js  index.d.ts  latex-lexer.js  lexer.js  main-built.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  types-test.ts  vite.config.externalized_mathjs.js  vite.config.js
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
active-plans/: ARCHITECTURE_REVIEW.md  DESIGN_QUESTIONS.md  DONE_ARBITRARY_PERCISION_PLAN.md  DONE_DIVERGENCE_PLAN.md  DONE_MATRIX_PLAN.md  DONE_NORMALIZATION_REDESIGN.md  DONE_ODE_PLAN.md  FORM_GRADING_PLAN.md  FULL_SIMPLIFY_PLAN.md  I18N_MATH_NOTATION_PLAN.md  IMPROVEMENT_PLAN.md  INTEGRATION_PLAN.md  JS_RUST_DIFF.md  JS_RUST_TEST_DIVERGENCES.md  JS_TEST_COVERAGE_AUDIT.md  LIMITS_PLAN.md  PORTING_PLAN.md  SINGULARITY_TRANSFORM_PLAN.md  STACK_SAFETY_PLAN.md  STRUCTURAL_COMPARISON_PLAN.md  TSIFY_PLAN.md  (+2 more)
math-expressions-rs/: Cargo.toml
math-expressions-rs/scripts/: build-wasm.sh  extract-fixtures.mjs  generate-assumptions-corpus.mjs  generate-derivative-corpus.mjs  generate-edge-fixtures.mjs  generate-evaluate-corpus.mjs  generate-expand-corpus.mjs  generate-fuzz-tests.mjs  generate-numeric-corpus.mjs  generate-ode-corpus.mjs  generate-ops-corpus.mjs  generate-simplify-corpus.mjs  wasm-smoke.cjs
math-expressions-rs/src/: diff.rs  expr.rs  js_match.rs  js_tree.rs  lib.rs  limits.rs  matrix.rs  num.rs  ode.rs  ops.rs  resource_limits.rs  rootof.rs  sym.rs  upoly.rs  wasm.rs
math-expressions-rs/src/assumptions/: mod.rs
math-expressions-rs/src/eq/: discrete_infinite.rs  finite_field.rs  mod.rs
math-expressions-rs/src/eval/: mod.rs
math-expressions-rs/src/functions/: exp_log.rs  hyperbolic_inverse.rs  misc.rs  mod.rs
math-expressions-rs/src/integrate/: mod.rs  rational.rs
math-expressions-rs/src/norm/: expand.rs  mod.rs  order.rs  present.rs  simplify.rs  syntactic.rs
math-expressions-rs/src/output/: latex.rs  mod.rs  text.rs
math-expressions-rs/src/parse/: common.rs  latex.rs  lexer.rs  mod.rs  text.rs
math-expressions-rs/src/poly/: mod.rs
math-expressions-rs/src/precise/: complex.rs  diverge.rs  kernels.rs  mod.rs  quad.rs  tape.rs  tier0.rs
math-expressions-rs/tests/: assumptions_corpus.rs  derivative_corpus.rs  diff.rs  divergence.rs  eigen.rs  equality.rs  grade.rs  latex_parse.rs  norm.rs  num.rs  number_ops.rs  numeric.rs  ode_corpus.rs  ops.rs  ops_corpus.rs  reduce_rational.rs  roundtrip.rs  simplify_corpus.rs  text_parse.rs  zz_repro.rs
math-expressions-rs/tests/fixtures/: assumptions-corpus.json  assumptions-known-divergences.json  derivative-corpus.json  derivative-known-failures.json  equality-known-failures.json  ops-corpus.json  simplify-corpus.json  simplify-known-failures.json
(+203 files in other folders)
