[workspace]
members = [
    "packages/math-expressions-rs",
    "packages/math-expressions-rs-wasm/crate",
]
# The wasm-binding crate is a member (shared lockfile + release profile) but not
# a default member, so `cargo build` / `cargo test` (host) skip it. It is built
# explicitly for wasm32 by packages/math-expressions-rs-wasm/crate/build-wasm.sh.
default-members = ["packages/math-expressions-rs"]
resolver = "2"

# Size-oriented release profile (tmp/IMPROVEMENT_PLAN.md Phase 0); profiles
# must live in the workspace root or cargo ignores them. Measured 1.70 MB ->
# 1.10 MB wasm (-35%). `panic = "abort"` also matches a standing assumption
# at the JS boundary (js_tree.rs relies on aborting panics).
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
