[package]
name = "math-expressions"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0 OR Apache-2.0"
description = "Rust port of the math-expressions library (educational math CAS)"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
