[package]
name = "math-expressions"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0 OR Apache-2.0"
description = "Rust port of the math-expressions library (educational math CAS)"

# cdylib for the wasm-bindgen build; rlib so the crate stays usable as a normal
# Rust library and by the integration tests.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-complex = "0.4"
# default-features = false is load-bearing: rand's defaults pull in getrandom,
# which fails on wasm32-unknown-unknown. We always seed explicitly
# (SmallRng::seed_from_u64) and never need OS entropy.
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The JS boundary (PORTING_PLAN.md §13). Only used by the wasm32 `wasm` module,
# but the crate compiles fine on native (the macro just isn't invoked there).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.126"

[dev-dependencies]
proptest = "1"
